[project]
name = "snow-gapyear-py"
version = "0.1.0"
description = ""
authors = [
    {name = "jigs2",email = "snowinsky@sina.cn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.13.1,<4.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
